@@ -51,7 +51,8 @@ class MWNamespace {
 	 * @return bool
 	 */
 	public static function isMovable( $index ) {
-		return !( $index < NS_MAIN || $index == NS_IMAGE  || $index == NS_CATEGORY );
+		global $wgAllowImageMoving;
+		return !( $index < NS_MAIN || ($index == NS_IMAGE && !$wgAllowImageMoving)  || $index == NS_CATEGORY );
 	}
 
 	/**
